<resources>
    <string name="app_name">GroupQ</string>
    <string name="search_button">Search</string>
    <string name="url_textview">URL</string>
    <string name="url_button">Add Song</string>
    <string name="login">Log In</string>
    <string name="start">Start</string>
    <string name="prompt">Please fill out the following form to register for GroupQ!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="password_protect_lobby">Password Protect Lobby?</string>
    <string name="tos">I agree to the GroupQ Terms of Service</string>
    <string name="register">Register</string>
    <string name="or">-- OR --</string>
    <string name="search">SEARCH</string>
    <string name="source">Source: </string>
    <string name="keywords">keyword(s)</string>
    <string name="add_to_queue">Add to Q</string>
    <string name="lobby_list_title">Lobbies on Network</string>
    <string name="join_button_label">Join</string>
    <string name="host_a_lobby_button_label">Host a new lobby</string>
    <string name="lobby_creation_label">Lobby Creation</string>
    <string name="lobby_name_label">Lobby Name</string>
    <string name="create_lobby_button">Create Lobby</string>
    <string name="youtube_api_key">AIzaSyCL8nn2bP2rlzgeEserQnQpp0IYepN6Yas</string>
    <string name="delete_lobby">Delete Lobby</string>
    <string name="delete_lobby_msg">Are you sure you want to delete this lobby?</string>

</resources>
